syntax = "proto3";

package userPackage;

service UserService {
    rpc Signup(SignupRequest) returns (SignupResponse) {};
    rpc Login(LoginRequest) returns (LoginResponse) {};
    rpc ValidateToken(ValidateTokenReqeust) returns (ValidateTokenResponse) {};
    rpc GetProfile(GetProfileRequest) returns (GetProfileResponse) {};
    rpc UpdateProfile(UpdateProfileRequest) returns (UpdateProfileResponse) {};
}

message SignupRequest {
    string name = 1;
    string email = 2;
    string password = 3;
}
  
message SignupResponse {
    string token = 1;
}

message LoginRequest {
    string email = 1;
    string password = 2;
}
  
message LoginResponse {
    string token = 1;
}

message ValidateTokenReqeust {
    string token = 1;
}

message ValidateTokenResponse {
    string userId = 1;
}

message GetProfileRequest {
    string token = 1;
}

message GetProfileResponse {
    string email = 1;
    string name = 2;
}

message UpdateProfileRequest {
    string token = 1;
    optional string email = 2;
    optional string name = 3;
}

message UpdateProfileResponse {
    string email = 1;
    string name = 2;
}
